fixing js created div elements not showing
- dont use new createNewElement fn, use document.createElement....

--- a/css/mainTheme.css
+++ b/css/mainTheme.css
@@ -504,11 +504,12 @@ button,  button:active, button:hover, button:focus{
 	background-repeat: no-repeat;	
 }
 .infoMain_extended{
-	height: 330px;
-	padding: 180px 100px 50px 100px;
+	height: 335px;
+	padding: 175px 100px 50px 100px;
 	z-index: var(--woodBackZ); 
 	position: relative;
 	top: -110px;
+	display:none;
 	
 	background-image: url('../media/ivy1.svg'), url('../media/ivy5.svg'), url('../media/colouredWood2.svg'); 
 	background-position: left top, right top, center bottom;
@@ -538,8 +539,18 @@ button,  button:active, button:hover, button:focus{
 .info_dates{
 	font-size: 50px;
 	text-align: center;	
+	letter-spacing: 1px;
 }
 .aboutBold{
+	font-size: 30px;
+	font-family: var(--mainNameFont);
+    color: rgb(57,35,35, 0.9);
+    text-shadow: 0px 1px 0px rgba(207,186,186,.3), 0px -1px 0px rgba(0, 0, 0,.7);
+	font-weight: bold;
+	line-height: 50px;
+	letter-spacing: 4px;
+}
+.aboutSubBold{
 	font-size: 30px;
 	font-family: var(--mainNameFont);
     color: rgb(175, 127, 127, 0.8);
@@ -547,9 +558,17 @@ button,  button:active, button:hover, button:focus{
 	font-weight: bold;
 	line-height: 50px;
 	letter-spacing: 4px;
+	
+}
+.info_neeName {
+	display: none;
 }
 .info_neeName, .info_about{
 	font-size: 24px;
+}
+.infoAboutTable td, .infoAboutTable th {
+	vertical-align: top;
+	text-align: left;
 }
 
 
